--- a/typeAhead/index.html
+++ b/typeAhead/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Type Ahead 👀</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -15,7 +15,42 @@
     </ul>
   </form>
 <script>
-const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+  const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+  const cities = []
+
+  // fetch an array of cities
+  fetch(endpoint)
+    .then((response) => {
+      return response.json()
+    })
+    .then((data) => {
+      return cities.push(...data)
+    })
+
+  // find a match of the city or state depending on the word typed
+  function findMatches(wordToMatch, cities) {
+    return cities.filter((place) => {
+      const regex = new RegExp(wordToMatch, 'gi')
+      return place.city.match(regex) || place.state.match(regex)
+    })
+  }
+
+  // find match and display them in a list
+  function displayMatch() {
+    const matches = findMatches(this.value, cities)
+    const suggestions = document.querySelector('.suggestions')
+    const html = matches.map((place) => {
+      return `
+        <li>
+          <span>${place.city} , ${place.state}</span>
+        </li>
+      `
+    }).join('')
+    suggestions.innerHTML = html
+  }
+
+  const searchInput = document.querySelector('.search')
+  searchInput.addEventListener('keydown', displayMatch)
 
 </script>
   </body>
